--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<img src="/CurlyBassoon/docs/assets/images/Employee_List_1.png" alt="Image description">
+<img src="Employee_List_1.png" alt="Image description">
