--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<img src="Employee_List_1.png" alt="Metrc Employee List Image 1">
+<img src="Employee List_1.PNG" alt="Metrc Employee List Image 1">
