--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<img src="Employee List_1.PNG" alt="Metrc Employee List Image 1">
+<img src="Employee List_1.PNG" alt="Metrc Employee List Image 1"><br><img src="Employee List_2.PNG" alt="Metrc Employee List Image 2"><br><img src="Employee List_2.PNG" alt="Metrc Employee List Image 2">
